uclibc/riscv64: add shared library support
This syncs with upstream. Most code is unused as of yet since we use our
own version for now. Only the new reloc defines are added (elf.h)

Change-Id: Ia0cf1c4b8690162a655451f7ac95e91ad71d8624

--- a/uclibc/lib/contrib/uclibc/extra/Configs/Config.in
+++ b/uclibc/lib/contrib/uclibc/extra/Configs/Config.in
@@ -485,7 +485,7 @@ config LDSO_LD_LIBRARY_PATH
 
 config UCLIBC_CTOR_DTOR
 	bool
-	default y
+	default y if !TARGET_riscv64
 	help
 	  If you wish to build uClibc with support for global constructor
 	  (ctor) and global destructor (dtor) support, then answer Y here.
