ned: add L4.sleep and L4.msleep functions
These functions are mainly meant for debugging. Don't use sleep
in production scripts.

Change-Id: I055cca88e2439c827ae7131479a217a091be1b37

--- a/ned/server/src/Makefile
+++ b/ned/server/src/Makefile
@@ -9,6 +9,8 @@ SRC_CC          := remote_mem.cc app_model.cc app_task.cc main.cc \
 		   lua_platform_control.cc lua_debug_obj.cc
 SRC_DATA        := ned.lua
 
+SRC_CC          += lua_sleep.cc
+
 REQUIRES_LIBS   := libloader l4re-util l4re lua++ libpthread cxx_libc_io cxx_io
 
 ifeq (1,0)
