ned: add external command line prompt tool
Adds a tiny utility to allow to interact with ned via its
command control interface. Can be easily started from the ned
script with the following Lua lines:

  local cmd = l:new_channel()
  l:start({caps = { svr = cmd }}, "rom/ned-prompt")
  L4.server_loop(cmd)

Or if you want to have ned and ned-prompt use the same
console:

  l:start({ log = L4.Env.log,
            caps = { svr = cmd } },
          "rom/ned-prompt")

Fixes #L4RE-235

Change-Id: I0c16c413afcf9c1aa0f05d9dc679947b7d4a5e79

--- a/ned/ned-prompt/Makefile
+++ b/ned/ned-prompt/Makefile
@@ -1,6 +1,6 @@
-PKGDIR	?= .
+PKGDIR	?= ..
 L4DIR	?= $(PKGDIR)/../../..
 
-TARGET = lib server ned-prompt
+TARGET = src
 
 include $(L4DIR)/mk/subdir.mk
