ned: add missing dependency for ned-prompt
Change-Id: I4f2b7b5523f91f6d77e74b07783bf34c443c15ca

--- a/ned/ned-prompt/src/Makefile
+++ b/ned/ned-prompt/src/Makefile
@@ -3,7 +3,7 @@ L4DIR           ?= $(PKGDIR)/../../..
 
 TARGET        = ned-prompt
 SRC_CC        = ned-prompt.cc
-REQUIRES_LIBS = readline libc_be_file_stdin
+REQUIRES_LIBS = readline
 DEPENDS_PKG   = readline
 
 include $(L4DIR)/mk/prog.mk
