--- a/ned/ned-prompt/src/Makefile
+++ b/ned/ned-prompt/src/Makefile
@@ -3,7 +3,7 @@ L4DIR           ?= $(PKGDIR)/../../..
 
 TARGET        = ned-prompt
 SRC_CC        = ned-prompt.cc
-REQUIRES_LIBS = readline
-DEPENDS_PKG   = readline
+REQUIRES_LIBS := readline
+DEPENDS_PKGS  := readline
 
 include $(L4DIR)/mk/prog.mk
