--- a/ned/Makefile
+++ b/ned/Makefile
@@ -3,4 +3,7 @@ L4DIR	?= $(PKGDIR)/../../..
 
 TARGET = lib server ned-prompt
 
+# ned-prompt and server depend on the includes from lib/include
+ned-prompt server: lib
+
 include $(L4DIR)/mk/subdir.mk
