ned: implement task state lua callbacks
Currently it's only possible to wait for a single task to terminate.
This is not sufficient when managing many tasks at once. This commit
adds the ability to register a callback that is invoked when a task
terminates:

  task = L4.default_loader:start(...)
  task:exit_handler(function(exit_code)
    if exit_code == nil then
      print("Task was killed")
    else
      print("Task has terminated w/ code [" .. exit_code .. "]")
    end
  end)

If the task did already terminate then the callback is invoked
immediately. Usually the ned script should now use continuation style.
So instead of

  task = L4.default_loader:start(...)
  task:wait()
  do_more()

the script should use

  task = L4.default_loader:start(...)
  task:exit_handler(function()
    do_more()
  end)

though the former is still supported.

Change-Id: I86622193b255dac717a5dceab39e7681ea5ca32a

--- a/ned/server/src/Makefile
+++ b/ned/server/src/Makefile
@@ -6,7 +6,7 @@ TARGET		 = ned
 SRC_CC          := remote_mem.cc app_model.cc app_task.cc main.cc \
                    lua.cc lua_env.cc lua_ns.cc lua_cap.cc \
                    lua_exec.cc lua_factory.cc lua_info.cc server.cc \
-                   lua_platform_control.cc lua_debug_obj.cc
+                   lua_platform_control.cc lua_debug_obj.cc foreign_server.cc
 SRC_DATA        := ned.lua
 
 SRC_CC          += lua_sleep.cc
