lua: only use 'rc' as AR flags (not 'rcu')
By default AR is configured with --enable-deterministic-archives on many
Linux distributions. Passing the 'u' modifier generates the following
warning:

  ar: `u' modifier ignored since `D' is the default (see `U')

The 'u' modifier is just a performance optimization: Removing it just
means that all objects of the archive are replaced instead of only the
newer ones. This is acceptable.

Change-Id: Ibe5968afe854da727f3478abe4f9a789f0a93d93

--- a/lua/lib/build++/Makefile
+++ b/lua/lib/build++/Makefile
@@ -21,7 +21,7 @@ liblua.a: $(SRC_DIR)/Makefile $(SRC_DIR)/Makefile.lua FORCE
 	  L4_DEFINES="$(DEFS)" GENERAL_D_LOC=$(GENERAL_D_LOC) \
 	  L4_INCLUDES="$(LIBCINCDIR) $(addprefix -I, $(L4INCDIR))" \
 	  PLAT=l4re CXXFLAGS_L4_GENERIC="$(CXXFLAGS_L4_GENERIC)" \
-	  CC="$(CXX)" AR="$(AR) rcu" RANLIB="$(RANLIB)" liblua.a
+	  CC="$(CXX)" AR="$(AR) rc" RANLIB="$(RANLIB)" liblua.a
 
 ifneq ($(strip $(INSTALL_TARGET)),liblua.a)
 $(INSTALL_TARGET): liblua.a
