--- a/uclibc/lib/contrib/uclibc/extra/Configs/Config.in
+++ b/uclibc/lib/contrib/uclibc/extra/Configs/Config.in
@@ -1041,6 +1041,14 @@ config UCLIBC_HAS_OBSOLETE_BSD_SIGNAL
 
 	  If unsure, say N.
 
+config UCLIBC_HAS_BSD_B64_NTOP_B64_PTON
+	bool "Support b64_ntop(), b64_pton() (bsd-compat)"
+	help
+	  Answer Y if you need additional BSD compatibility
+          (e.g. for openbsd-netcat).
+
+	  Most people will say N.
+
 config UCLIBC_HAS_OBSOLETE_SYSV_SIGNAL
 	bool "SYSV obsolete signal functions"
 	help
