--- a/l4sys/lib/src/Makefile
+++ b/l4sys/lib/src/Makefile
@@ -19,11 +19,14 @@ SRC_CC                       = kobject.cc
 SRC_C_libl4sys-ppc32        += ARCH-ppc32/atomic_ops.c
 SRC_S_libl4sys-sparc        += ARCH-sparc/atomic_ops.S
 
+SRC_S_libl4sys.a-arm         = ARCH-arm/syscall.S
 SRC_S_libl4sys.a-arm64       = $(if $(CONFIG_BID_PIE),ARCH-arm64/syscall.S)
+SRC_S_libl4sys.so-arm        = ARCH-arm/syscall.S
 SRC_S_libl4sys.so-arm64      = ARCH-arm64/syscall.S
 
 SRC_C_libl4sys-direct.a      = kip.c
 SRC_S_libl4sys-direct.so     =
+SRC_S_libl4sys-direct.a-arm  = ARCH-arm/syscall.S
 SRC_S_libl4sys-direct.a-arm64 = ARCH-arm64/syscall.S
 SRC_S_libl4sys-direct.a-x86  = syscalls_direct.S
 SRC_S_libl4sys-direct.a      = $(SRC_S_libl4sys-direct.a-$(ARCH))
