--- a/ldscripts/Makefile
+++ b/ldscripts/Makefile
@@ -54,7 +54,9 @@ $(eval $(call make_per_obj_vars,crtn.s.o,crtn.s.o,crtn.S))
 
 $(eval $(call make_per_obj_vars,crti.o,kip_addr.o,kip_addr.S))
 
-crti.o: crti_s.o kip_addr.o
+DEFINES_kip_addr.o = -D__L4_KIP_ADDR__=$(L4_KIP_ADDR)
+
+crti.o: crti_s.o $(if $(CONFIG_MMU),kip_addr.o)
 	@$(GEN_MESSAGE)
 	$(VERBOSE)$(LD) -r -o $@ $^
 
