libgcc: only build shared lib on mmu systems
Change-Id: I8746762469f96d0177d5b5542e690ddaa79639e0

--- a/libgcc-pure/lib/Makefile
+++ b/libgcc-pure/lib/Makefile
@@ -4,6 +4,6 @@ L4DIR	?= $(PKGDIR)/../../..
 SYSTEMS        = $(SYSTEMS_PLAIN)
 PC_LIBS        = -lgcc
 LIBGCC_LIB_DIR = $(PKGDIR)/../libgcc/lib
-LIBGCC_DO_SHARED = y
+LIBGCC_DO_SHARED = $(CONFIG_MMU)
 
 include $(LIBGCC_LIB_DIR)/Makefile.libgcc
