Add support for static PIE on arm(64) and x86_64
In case of a static position independent executable the startup code
must apply relocations before global symbols can be used. The relevant
code is already available in uclibc. We just have to include it into
the compilation.

There are some places that provide bid-bender snippets in their
pc-file. They need to have the "static-pie" switch added too. Otherwise
they won't link when this mode is finally selected.

A static PIE executable will have additional PHDRs, in particular a
DYNAMIC and GNU_EH_FRAME. Whether a statically linked executable is
really linked position independent depends on a some additional
conditions. It is thus necessary to use a dedicated linker script for
position independent executables. Otherwise all static executables
would have an empty DYNAMIC PHDR which would confuse tools and the
loader could not distinguish between PIE and non-PIE.

Change-Id: I331cbbbe0bcd4cb89b1e5efdf5397def060a33d5

--- a/l4sys/lib/src/Makefile
+++ b/l4sys/lib/src/Makefile
@@ -6,11 +6,11 @@ TARGET		             = libl4sys.a        libl4sys.so        \
                                libl4sys-l4x.a    libl4sys-l4x.so
 PC_FILENAMES                 = l4sys l4sys-direct l4sys-l4x
 PC_LIBS_l4sys                = -ll4sys
-PC_EXTRA_l4sys               = Link_Libs= %{static:-ll4sys}
+PC_EXTRA_l4sys               = Link_Libs= %{static|static-pie:-ll4sys}
 PC_LIBS_l4sys-direct         = -ll4sys-direct
-PC_EXTRA_l4sys-direct        = Link_Libs= %{static:-ll4sys-direct}
+PC_EXTRA_l4sys-direct        = Link_Libs= %{static|static-pie:-ll4sys-direct}
 PC_LIBS_l4sys-l4x            = -ll4sys-l4x
-PC_EXTRA_l4sys-l4x           = Link_Libs= %{static:-ll4sys-l4x}
+PC_EXTRA_l4sys-l4x           = Link_Libs= %{static|static-pie:-ll4sys-l4x}
 
 CXXFLAGS                    += -DL4_NO_RTTI -fno-rtti -fno-exceptions
 DEFINES                      = -DL4_KIP_ADDR=$(L4_KIP_ADDR)
@@ -19,6 +19,7 @@ SRC_CC                       = kobject.cc
 SRC_C_libl4sys-ppc32        += ARCH-ppc32/atomic_ops.c
 SRC_S_libl4sys-sparc        += ARCH-sparc/atomic_ops.S
 
+SRC_S_libl4sys.a-arm64       = $(if $(CONFIG_BID_PIE),ARCH-arm64/syscall.S)
 SRC_S_libl4sys.so-arm64      = ARCH-arm64/syscall.S
 
 SRC_C_libl4sys-direct.a      = kip.c
