--- a/uclibc/lib/minimal_l4re/Makefile
+++ b/uclibc/lib/minimal_l4re/Makefile
@@ -5,7 +5,7 @@ L4DIR           ?= $(PKGDIR)/../../..
 TARGET          := libuc_c_minimal_l4re.a
 PC_FILENAME     := libc_minimal_l4re
 define PC_EXTRA
-Link_Libs= %{static:-luc_c_minimal_l4re}
+Link_Libs= %{static|static-pie:-luc_c_minimal_l4re}
 endef
 
 DEFINES         := -DL4_MINIMAL_LIBC
