Add support for static PIE on arm(64) and x86_64
In case of a static position independent executable the startup code
must apply the relocations. This is very similar to ld.so and the
relevant code can indeed be reused. The relocation must be done before
any global symbol can be used.

If uclibc is compiled with __PIC__ the static library will have a
hidden _reloc_static_pie symbol that is normally called by the uclibc
startup code. If the final binary is linked *without* -pie the symbol
will be intercepted by a stub in crt1.o. For the static-pie case a
dedicated crt1.p.o variant is used that does not have _reloc_static_pie
which will then be taken from libc.a. The linkage of shared libc stays
the same. Depending on these three variants crt1 must use either
PC-relative addressing (PIE), lookup the GOT (shared libc) or can use
symbols directly (static).

Change-Id: I331cbbbe0bcd4cb89b1e5efdf5397def060a33d5

--- a/ldscripts/Makefile
+++ b/ldscripts/Makefile
@@ -4,8 +4,8 @@ L4DIR		?= $(PKGDIR)/../../..
 SYSTEMS		= $(SYSTEMS_PLAIN)
 
 define PC_EXTRA
-Link_Start= %{nocrt1|shared:; :%:search(crt1.o %(libdir))} %:search(crti%{shared:.s}.o %(libdir)) %{static:%:if-exists(%:search(crtbeginT.o %(gcclibdir)) %:search(crtbegin.o %(gcclibdir)));shared:%:search(crtbeginS.o %(gcclibdir));:%:search(crtbegin.o %(gcclibdir))}
-Link_End=   %:search(%{shared:crtendS.o;:crtend.o} %(gcclibdir)) %:search(crtn%{shared:.s}.o %(libdir))
+Link_Start= %{nocrt1|shared:; :%:search(crt1%{static:;static-pie:.p;:.s}.o %(libdir))} %:search(crti%{shared:.s}.o %(libdir)) %{static:%:if-exists(%:search(crtbeginT.o %(gcclibdir)) %:search(crtbegin.o %(gcclibdir)));shared|static-pie:%:search(crtbeginS.o %(gcclibdir));:%:search(crtbegin.o %(gcclibdir))}
+Link_End=   %:search(%{shared|static-pie:crtendS.o;:crtend.o} %(gcclibdir)) %:search(crtn%{shared:.s}.o %(libdir))
 endef
 
 LD_SCRIPTS      = main_stat.ld main_rel.ld main_dyn.ld
@@ -33,8 +33,9 @@ TARGET            =
 
 vpath %.S $(UCLIBC_SYSDEPS)
 
-INSTALL_TARGET	= $(LD_SCRIPTS) crti.o crtn.o crt1.o crti.s.o crtn.s.o crt1.s.o
-DEFINES_crt1.s.o = -DL_Scrt1
+INSTALL_TARGET	= $(LD_SCRIPTS) crti.o crtn.o crt1.o crti.s.o crtn.s.o crt1.s.o crt1.p.o
+DEFINES_crt1.s.o = -DPIC -DSHARED
+DEFINES_crt1.p.o = -DPIC
 
 REQUIRES_LIBS_all_lib :=
 
@@ -44,10 +45,12 @@ include $(L4DIR)/mk/lib.mk
 
 $(eval $(call BID_MAKE_RULE_template, crti_s.o, crti.S,AS))
 $(eval $(call BID_MAKE_RULE_template, kip_addr.o, kip_addr.S,AS))
+$(eval $(call BID_MAKE_RULE_template, crt1.p.o, crt1.S,AS))
 
 $(eval $(call make_per_obj_vars,crti.s.o,crti.s.o,crti.S))
 $(eval $(call make_per_obj_vars,crti_s.o,crti_s.o,crti.S))
 $(eval $(call make_per_obj_vars,crt1.o,crt1.o,crt1.S))
+$(eval $(call make_per_obj_vars,crt1.p.o,crt1.p.o,crt1.S))
 $(eval $(call make_per_obj_vars,crt1.s.o,crt1.s.o,crt1.S))
 $(eval $(call make_per_obj_vars,crtn.o,crtn.o,crtn.S))
 $(eval $(call make_per_obj_vars,crtn.s.o,crtn.s.o,crtn.S))
@@ -60,7 +63,13 @@ crti.o: crti_s.o $(if $(CONFIG_MMU),kip_addr.o)
 	@$(GEN_MESSAGE)
 	$(VERBOSE)$(LD) -r -o $@ $^
 
-%.ld: $(PKGDIR)/ARCH-$(ARCH)/%.ld $(SRC_DIR)/Makefile $(SRC_DIR)/generic.h
+# we need to track pre-processing flags of ldscripts manually
+.ldscripts-change-tracker: FORCE
+	$(VERBOSE)echo "$(CONFIG_BID_PIE) $(CFLAGS)" > $@.tmp
+	$(VERBOSE)$(call move_if_changed,$@,$@.tmp)
+
+%.ld: $(PKGDIR)/ARCH-$(ARCH)/%.ld $(SRC_DIR)/Makefile $(SRC_DIR)/generic.h .ldscripts-change-tracker
 	@$(GEN_MESSAGE)
 	$(VERBOSE)$(CPP) -nostdinc -include $(SRC_DIR)/generic.h \
+	      -DCONFIG_BID_PIE=$(if $(CONFIG_BID_PIE),1,0) \
 	      -Wno-trigraphs -U$(UCLIBC_ARCH_$(ARCH)) $(CFLAGS) -P $$CPP_ARGS $< $@
