--- a/l4sys/lib/src/Makefile
+++ b/l4sys/lib/src/Makefile
@@ -6,11 +6,11 @@ TARGET		             = libl4sys.a        libl4sys.so        \
                                libl4sys-l4x.a
 PC_FILENAMES                 = l4sys l4sys-direct l4sys-l4x
 PC_LIBS_l4sys                = -ll4sys
-PC_EXTRA_l4sys               = Link_Libs= %{static:-ll4sys}
+PC_EXTRA_l4sys               = Link_Libs= %{static|static-pie:-ll4sys}
 PC_LIBS_l4sys-direct         = -ll4sys-direct
-PC_EXTRA_l4sys-direct        = Link_Libs= %{static:-ll4sys-direct}
+PC_EXTRA_l4sys-direct        = Link_Libs= %{static|static-pie:-ll4sys-direct}
 PC_LIBS_l4sys-l4x            = -ll4sys-l4x
-PC_EXTRA_l4sys-l4x           = Link_Libs= %{static:-ll4sys-l4x}
+PC_EXTRA_l4sys-l4x           = Link_Libs= %{static|static-pie:-ll4sys-l4x}
 
 CXXFLAGS                    += -DL4_NO_RTTI -fno-rtti -fno-exceptions
 DEFINES                      = -D__L4_KIP_ADDR__=$(L4_KIP_ADDR)
