ldso: don't depend on arm64.ld on other architectures
Change-Id: Ic600146d4bb5760d81a200193d77e1922ceb31f1

--- a/ldso/ldso/Makefile
+++ b/ldso/ldso/Makefile
@@ -72,7 +72,7 @@ endif
 
 include $(L4DIR)/mk/lib.mk
 
-$(TARGET): $(SRC_DIR)/arm64.ld
+$(TARGET): $(if $(filter arm64,$(ARCH)),$(SRC_DIR)/arm64.ld)
 
 ldso.1.o: ldso.o
 	$(OBJCOPY) --weaken $< $@
