Aarch64: Use correct syscall instruction for Sigma0+Moe
As of Idc858df300a9eebb6f1264b4b0957b17bdbd3f49, userland applications
run in PL1. Compile the correct syscall instruction into Sigma0/Moe to
not depend on runtime patching.

Change-Id: Ie68ce58dc26f1ec81af09f600a434d894c2ec5e3
Requires-Change-Id: I55ca5f7e8eb0a421640b71f9a5a68e40b656d286

--- a/moe/server/src/Makefile
+++ b/moe/server/src/Makefile
@@ -23,3 +23,5 @@ DEFINES        += -DL4_CXX_NO_EXCEPTION_BACKTRACE -DL4_MINIMAL_LIBC
 LDFLAGS        += --entry=_real_start
 
 include $(L4DIR)/mk/prog.mk
+
+DEFINES_arm64-l4f += $(if $(CONFIG_KERNEL_CPU_VIRT),-DCONFIG_KERNEL_CPU_VIRT=1)
