moe: no not use exceptions
Change-Id: I41c1c09827dac44b5e7f79b129ad18abeb12795b

--- a/moe/server/src/Makefile
+++ b/moe/server/src/Makefile
@@ -31,6 +31,7 @@ REQUIRES_LIBS  := libkproxy libloader l4re-util libsigma0 \
 EXTRA_LIBS     := -ll4sys-direct
 DEFINES        += -DL4_CXX_NO_EXCEPTION_BACKTRACE -DL4_MINIMAL_LIBC
 LDFLAGS        += --entry=_real_start
+CXXFLAGS       += -fno-exceptions
 
 include $(L4DIR)/mk/prog.mk
 
