--- a/l4re_kernel/server/src/Makefile
+++ b/l4re_kernel/server/src/Makefile
@@ -20,7 +20,7 @@ MODE = sigma0
 
 PRIVATE_INCDIR      += $(SRC_DIR)/ARCH-$(ARCH)
 
-DEFINES += -DL4_CXX_NO_EXCEPTION_BACKTRACE
+DEFINES += -DL4_CXX_NO_EXCEPTION_BACKTRACE -DL4_LOADER_RELOC_BASE=$(DEFAULT_RELOC_$(ARCH))
 
 REQUIRES_LIBS  := libc_be_minimal_log_io cxx_io cxx_libc_io libc_minimal l4re \
                   l4re-util libsupc++_minimal libloader libc_minimal_l4re
