--- a/uclibc-headers/Makefile
+++ b/uclibc-headers/Makefile
@@ -20,6 +20,7 @@ DST_HEADERS-ppc32   := asm/sockios.h asm/ioctl.h
 DST_HEADERS-mips    := asm/sockios.h asm/ioctl.h asm-generic/ioctl.h \
                        asm/param.h asm/sgidefs.h sgidefs.h \
                        sys/asm.h sys/regdef.h sys/tas.h
+DST_HEADERS-riscv   := sys/asm.h
 
 DST_HEADERS += $(DST_HEADERS-$(BUILD_ARCH))
 
