uclibc: make __{en,de}code_dotted into macros
they merely call dn_{comp,expand} slightly rearranging the arguments

Change-Id: I656f9a4a44abe6d0623df83609906ca6f942c666
Signed-off-by: mirabilos <mirabilos@evolvis.org>

--- a/uclibc/lib/contrib/uclibc/libc/inet/Makefile.in
+++ b/uclibc/lib/contrib/uclibc/libc/inet/Makefile.in
@@ -26,7 +26,7 @@ CSRC-$(V4_OR_V6) += \
 	inet_lnaof.c inet_netof.c
 # multi source resolv.c
 CSRC-$(V4_OR_V6) += \
-	encodeh.c decodeh.c encoded.c decoded.c \
+	encodeh.c decodeh.c \
 	encodeq.c encodea.c \
 	read_etc_hosts_r.c \
 	dnslookup.c opennameservers.c closenameservers.c \
