l4sys: add Thread_group bindings
The opcode for binding a receive endpoint to a thread group is actually
the same as binding to a thread.

Change-Id: I2bb00348c02523361b46db20f64d3fb9303a651d

--- a/l4sys/include/Makefile
+++ b/l4sys/include/Makefile
@@ -14,6 +14,7 @@ EXTRA_TARGET	+= capability kip task factory irq icu thread vcon \
                    snd_destination     \
                    iommu               \
                    arm_smccc           \
+                   thread_group        \
                    vcpu_context        \
                    cxx/ipc_array       \
                    cxx/ipc_basics      \
