--- a/l4sys/doc/files.cfg
+++ b/l4sys/doc/files.cfg
@@ -1,5 +1,6 @@
 INPUT  += %PKGDIR%/doc/l4sys-l4f-groups.dox \
           %PKGDIR%/doc/factory.dox \
+          %PKGDIR%/doc/kernel-objects.dox \
 	  l4/sys arm/l4f/l4/sys arm/l4/sys amd64/l4f/l4/sys \
           amd64/l4/sys x86/l4f/l4/sys x86/l4/sys l4/sys/cxx
 
