uclibc: changes to upstream files not used by L4Re
This commit collects all upstream changes to files, features and
architectures that are not currently used or supported by L4re as well
as changes to the upstream buildsystem not used by L4Re.

* changes to architectures not supported by L4re

arc: fix signal handler restorer
nds32: sync with binutils 2.37, gcc 11.2 and linux 5.10.93 changes
kvx: fix warning about __BITS_PER_LONG not being defined
xtensa: implement user context manipulation functions

* changes to features not used / supported by L4Re

Fix some warnings due to type issues
add prlimit syscall wrapper
add prlimit syscall wrapper, now for real
guard prlimit, reported by Lance Fredrickson
inet: gethostid: only accept v4 addresses

* changes to the uclibc buildsystem (not used by L4Re)

fix ARCH_NATIVE_BIT for aarch64

Change-Id: I0fbd3bf8feec379d379968f6ef05133b10cac100

--- a/uclibc/lib/contrib/uclibc/extra/Configs/Config.in
+++ b/uclibc/lib/contrib/uclibc/extra/Configs/Config.in
@@ -145,6 +145,26 @@ config TARGET_xtensa
 
 endchoice
 
+config TARGET_LDSO_NAME
+	string
+	default "ld64-uClibc" if TARGET_ia64
+	default "ld64-uClibc" if TARGET_powerpc64
+	default "ld64-uClibc" if TARGET_sparc64
+	default "ld64-uClibc" if TARGET_x86_64
+	default "ld64-uClibc" if TARGET_kvx
+	default "ld64-uClibc" if CONFIG_MIPS_N64_ABI
+	default "ld-uClibc"
+
+config TARGET_ARCH_BITS
+	int
+	default 64 if TARGET_aarch64
+	default 64 if TARGET_ia64
+	default 64 if TARGET_powerpc64
+	default 64 if TARGET_sparc64
+	default 64 if TARGET_x86_64
+	default 64 if TARGET_kvx
+	default 64 if CONFIG_MIPS_N64_ABI
+	default 32
 
 menu "Target Architecture Features and Options"
 
