moe: add PIE support for arm(64) and x86_64
The startup code needs to been adapted to not emit relocations which
are forbidden in the read-only text segment.

Change-Id: I87e133d727319c3c59d87270b2e4ae3dc8664ff8

--- a/moe/server/src/Makefile
+++ b/moe/server/src/Makefile
@@ -18,6 +18,11 @@ SRC_S_arm64-l4f = exception-el1.S
 SRC_CC_arm64-l4f = exception-el1-handler.cc
 MODE            = sigma0
 
+CAN_PIE_amd64   := y
+CAN_PIE_arm     := y
+CAN_PIE_arm64   := y
+BID_CAN_PIE      = $(CAN_PIE_$(ARCH))
+
 REQUIRES_LIBS  := libkproxy libloader l4re-util libsigma0 \
                   cxx_io cxx_libc_io libc_be_minimal_log_io libsupc++_minimal
 EXTRA_LIBS     := -ll4sys-direct
