sigma0: add PIE support for arm(64) and x86_64
Because sigma0 does not use the uclibc startup, it must call
reloc_static_pie() itself. The startup code for amd64, arm and arm64
additionally needs to be adapted to not emit relocations which are
forbidden in the read-only text segment. It's not possible to provide
support for i386 because this architecture does not allow PC-relative
addressing without an existing stack.

Change-Id: I5738da0c7922bcb0eeee3ddf190a57b8c35d8183

--- a/sigma0/server/src/Makefile
+++ b/sigma0/server/src/Makefile
@@ -15,6 +15,11 @@ DEFAULT_RELOC_sparc := 0x01200000
 DEFAULT_RELOC_ppc32 := 0x00100000
 RELOC_PHYS          := y
 
+CAN_PIE_amd64   := y
+CAN_PIE_arm     := y
+CAN_PIE_arm64   := y
+BID_CAN_PIE      = $(CAN_PIE_$(ARCH))
+
 PRIVATE_INCDIR	= $(SRC_DIR)
 
 SRC_CC := init.cc memmap.cc page_alloc.cc mem_man.cc io_backend.cc \
