ldso: Suppress false-positive warning when casting function result
At a few places in uclibc's ldso component the result of a pointer
returning function (_dl_find_hash or __builtin_return_address) is
directly cast to an address (unsigned long or intptr_t), without first
storing the function result in an intermediate variable.

This causes false-positive warnings as the following:

warning: cast from function call of type 'char *' to non-matching type 'long unsigned int' [-Wbad-function-cast]
    |   symbol_addr = (unsigned long)_dl_find_hash(symname, scope, tpnt,
    |                 ^

Change-Id: I401ff1481f865352fefd69a6fdcc89d846d46298

--- a/ldso/ldso/Makefile
+++ b/ldso/ldso/Makefile
@@ -85,3 +85,5 @@ CXXFLAGS += -DL4_NO_RTTI -fno-rtti -fno-exceptions -fvisibility=hidden \
 
 CPPFLAGS := $(filter-out -DL4SYS_USE_UTCB_WRAP=1, $(CPPFLAGS))
 
+# Suppress false-positive warnings
+CFLAGS   += -Wno-bad-function-cast
