l4re: remove dependency to libstdc++
Change-Id: Ie3be146cd44293495b1fc98b5427f8d8fcacfb25

--- a/l4re/Control
+++ b/l4re/Control
@@ -1,3 +1,3 @@
 Provides: l4re-util l4re
-requires: crtn l4util cxx_libc_io libstdc++-headers ldscripts
+requires: crtn l4util cxx_libc_io libc-headers ldscripts
 maintainer: warg@os.inf.tu-dresden.de
