libc_backends: split into minimal version
The minimal version does not depend on libstdc++. These backends are
enough to run simple L4Re programs.

Change-Id: I0df8e03fb7fca995477aab896423da4941c284e9

--- a/l4re_kernel/server/src/Makefile
+++ b/l4re_kernel/server/src/Makefile
@@ -23,7 +23,7 @@ PRIVATE_INCDIR      += $(SRC_DIR)/ARCH-$(ARCH)
 DEFINES += -DL4_CXX_NO_EXCEPTION_BACKTRACE -DL4_LOADER_RELOC_BASE=$(DEFAULT_RELOC_$(ARCH))
 
 REQUIRES_LIBS  := libc_be_minimal_log_io cxx_io cxx_libc_io libc_minimal l4re \
-                  l4re-util libsupc++_minimal libloader libc_minimal_l4re
+                  l4re-util libsupc++_minimal libloader libc_be_minimal_l4re
 
 CXXFLAGS += $(CXXFLAGS_LOW_LEVEL)
 
