Add dedicated stack PHDR on arm no-MMU
The stack is allocated as special section that is adjacent to the
data/bss section. This makes it possible to merge both logical sections
into a single MPU region in hardware. It also removes the burden of the
loader to allocate a separate stack frame from some dynamic memory
pool.

Change-Id: If7dc218004d41651fc5d986720536a6d4aa3d7fc

--- a/ldscripts/Makefile
+++ b/ldscripts/Makefile
@@ -65,7 +65,7 @@ crti.o: crti_s.o $(if $(CONFIG_MMU),kip_addr.o)
 
 # we need to track pre-processing flags of ldscripts manually
 .ldscripts-change-tracker: FORCE
-	$(VERBOSE)echo "$(CONFIG_BID_PIE) $(CFLAGS)" > $@.tmp
+	$(VERBOSE)echo "$(CONFIG_BID_PIE) $(CONFIG_MMU) $(CFLAGS)" > $@.tmp
 	$(VERBOSE)$(call move_if_changed,$@,$@.tmp)
 
 %.ld: $(PKGDIR)/ARCH-$(ARCH)/%.ld $(SRC_DIR)/Makefile $(SRC_DIR)/generic.h .ldscripts-change-tracker
