ARCH-arm/l4-atomic-64bit.c: no -Wbuiltin-decl-mismatch
Same change as for l4-atomic.c: Prevent tons of warnings when compiling
with gcc-9 on ARM. Even upstream uses unexpected functions types, so
just disable the warnings instead of fixing them in an incompatible way
to upstream.

See also ticket #CD-724.

Change-Id: Icdc63cd72115be2980e3742a41cc05b75916f7af

--- a/libgcc/lib/Makefile
+++ b/libgcc/lib/Makefile
@@ -13,5 +13,6 @@ PC_LIBS_libgcc-l4 = -lgcc-l4
 INSTALL_TARGET   += libgcc-l4.a
 
 CFLAGS_ARCH-arm/l4-atomic.c = -Wno-builtin-declaration-mismatch
+CFLAGS_ARCH-arm/l4-atomic-64bit.c = -Wno-builtin-declaration-mismatch
 
 include $(PKGDIR)/lib/Makefile.libgcc
