ARCH-arm/l4-atomic.c: no -Wbuiltin-declaration-mismatch
Prevent tons of warning when compiling l4-atomic.c with gcc-9 on ARM.
Even upstream uses unexpected functions types, so just disable the
warnings instead of fixing them in an incompatible way to upstream.

See also ticket #CD-724.

Change-Id: I1b73ee191d7e4df8312c6304e9103a570de90647

--- a/libgcc/lib/Makefile
+++ b/libgcc/lib/Makefile
@@ -12,4 +12,6 @@ PC_LIBS_libgcc    = -lgcc
 PC_LIBS_libgcc-l4 = -lgcc-l4
 INSTALL_TARGET   += libgcc-l4.a
 
+CFLAGS_ARCH-arm/l4-atomic.c = -Wno-builtin-declaration-mismatch
+
 include $(PKGDIR)/lib/Makefile.libgcc
