remove unused l4sigma0_new_client() call
Use the factory interface with L4_PROTO_SIGMA0 instead.

See ticket #CD-726.

Change-Id: Ie33e592c7526355b48748f55595ecbd7c90068f3
Requires-Change-Id: Ifd2de5f19c9cf0bfa2f6fd66ae67c9e02105e7b1

--- a/libsigma0/lib/src/Makefile
+++ b/libsigma0/lib/src/Makefile
@@ -2,6 +2,6 @@ PKGDIR		?= ../..
 L4DIR		?= $(PKGDIR)/../../..
 
 TARGET		= libsigma0.a
-SRC_C		= mem.c anypage.c kip.c debug.c client.c
+SRC_C		= mem.c anypage.c kip.c debug.c
 
 include $(L4DIR)/mk/lib.mk
