--- a/l4re/include/namespace
+++ b/l4re/include/namespace
@@ -165,13 +165,13 @@ public:
    *
    * \retval 0           Object was successfully registered with \a name.
    * \retval -L4_EEXIST  Name already registered.
-   * \retval -L4_EPERM   Caller doesn't have necessary permissions.
+   * \retval -L4_EPERM   Caller does not have #L4_CAP_FPAGE_W right on the
+   *                     invoked capability.
    * \retval -L4_ENOMEM  Server has insufficient resources.
    * \retval -L4_EINVAL  Invalid parameter.
    * \retval <0          IPC errors, see #l4_error_code_t.
    *
    * \caprights{RW}
-   *
    */
   long register_obj(char const *name, L4::Ipc::Cap<void> obj,
                     unsigned flags = Rw) const noexcept
@@ -193,7 +193,8 @@ public:
    *
    * \retval 0            Entry successfully removed.
    * \retval -L4_ENOENT   Given name does not exist.
-   * \retval -L4_EPERM    Caller does not have write permission.
+   * \retval -L4_EPERM    Caller does not have #L4_CAP_FPAGE_W right on the
+   *                      invoked capability.
    * \retval -L4_EACCESS  Name cannot be removed.
    * \retval <0           IPC errors, see #l4_error_code_t.
    *
