--- a/l4re/Control
+++ b/l4re/Control
@@ -1,3 +1,3 @@
 Provides: l4re-util l4re
-requires: crtn l4util cxx_libc_io libstdc++-headers ldscripts
+requires: crtn libgcc l4util cxx_libc_io libstdc++-headers ldscripts
 maintainer: warg@os.inf.tu-dresden.de
