l4re: document timeout constants for query operation
Furthermore, this removes the To_forver constant, because since
Change ID I24ab4936c12e3baa876900d39dd70b652f2dfe6b the implementation
reports an error when negative timeout values are passed.

Change-Id: Ia360537222d647364c9b5c2aea54c5848ddb301e

--- a/l4re/include/namespace
+++ b/l4re/include/namespace
@@ -90,11 +90,11 @@ public:
     Partly_resolved = 0x020,      ///< Name was only partly resolved.
   };
 
+  /** Timeout values for query operation */
   enum Query_timeout
   {
-    To_default      = 3600000,
-    To_non_blocking = 0,
-    To_forever      = -1,
+    To_default      = 3600000, ///< Default timeout.
+    To_non_blocking = 0,       ///< Expect callee to answer immediately.
   };
 
   L4_RPC_NF(
