--- a/ned/Control
+++ b/ned/Control
@@ -1,4 +1,4 @@
-requires: stdlibs libc libsupc++ libloader l4re-util lua++
+requires: stdlibs libc libstdc++ libsupc++ libloader l4re-util lua++
 optional: readline
 provides: ned
 maintainer: warg@os.inf.tu-dresden.de
